--- a/MecProj/Views/Fornecedors/Create.cshtml
+++ b/MecProj/Views/Fornecedors/Create.cshtml
@@ -12,226 +12,44 @@
         }
     </style>
 </header>
-<script>
-    var json_cidades = {
-        "estados": [
-            {
-                "sigla": "Blumenau",
-                "nome": "Blumenau",
-                "cidades": [
-                    "Passo Manso",
-                    "Velha",
-                    "Vila Nova",
-                    "Centro",
-                    "Garcia"
-                ]
-            }
-            ,
-            {
-                "sigla": "Indaial",
-                "nome": "Indaial",
-                "cidades": [
-                    "Tapajós"
-                ]
-            }
-        ]
-    };
-    // FIM DO .js
-
-    function buscaBairros(e) {
-        document.querySelector("#cidade").innerHTML = '';
-        var cidade_select = document.querySelector("#cidade");
-
-        var num_estados = json_cidades.estados.length;
-        var j_index = -1;
-
-        // aqui eu pego o index do Estado dentro do JSON
-        for (var x = 0; x < num_estados; x++) {
-            if (json_cidades.estados[x].sigla == e) {
-                j_index = x;
-            }
-        }
-        if (j_index != -1) {
-            // aqui eu percorro todas as cidades e crio os OPTIONS
-            json_cidades.estados[j_index].cidades.forEach(function (cidade) {
-                var cid_opts = document.createElement('option');
-                cid_opts.setAttribute('value', cidade)
-                cid_opts.innerHTML = cidade;
-                cidade_select.appendChild(cid_opts);
-            });
-        } else {
-            document.querySelector("#cidade").innerHTML = '';
-        }
-    }
-
-    /////
-    function MascaraInteiro(num) {
-        var er = /[^0-9]/;
-        er.lastIndex = 0;
-        var campo = num;
-        if (er.test(campo.value)) {///verifica se é string, caso seja então apaga
-            var texto = $(campo).val();
-            $(campo).val(texto.substring(0, texto.length - 1));
-            return false;
-        } else {
-            return true;
-        }
-    }
-    function MascaraFloat(num) {
-        var er = /[^0-9.,]/;
-        er.lastIndex = 0;
-        var campo = num;
-        if (er.test(campo.value)) {///verifica se é string, caso seja então apaga
-            var texto = $(campo).val();
-            $(campo).val(texto.substring(0, texto.length - 1));
-            return false;
-        } else {
-            return true;
-        }
-    }
-    //formata de forma generica os campos
-    function formataCampo(campo, Mascara) {
-        var er = /[^0-9/ (),.-]/;
-        er.lastIndex = 0;
-
-        if (er.test(campo.value)) {///verifica se é string, caso seja então apaga
-            var texto = $(campo).val();
-            $(campo).val(texto.substring(0, texto.length - 1));
-        }
-        var boleanoMascara;
-        var exp = /\-|\.|\/|\(|\)| /g
-        var campoSoNumeros = campo.value.toString().replace(exp, "");
-        var posicaoCampo = 0;
-        var NovoValorCampo = "";
-        var TamanhoMascara = campoSoNumeros.length;
-        for (var i = 0; i <= TamanhoMascara; i++) {
-            boleanoMascara = ((Mascara.charAt(i) == "-") || (Mascara.charAt(i) == ".")
-                || (Mascara.charAt(i) == "/"))
-            boleanoMascara = boleanoMascara || ((Mascara.charAt(i) == "(")
-                || (Mascara.charAt(i) == ")") || (Mascara.charAt(i) == " "))
-            if (boleanoMascara) {
-                NovoValorCampo += Mascara.charAt(i);
-                TamanhoMascara++;
-            } else {
-                NovoValorCampo += campoSoNumeros.charAt(posicaoCampo);
-                posicaoCampo++;
-            }
-        }
-        campo.value = NovoValorCampo;
-        ////LIMITAR TAMANHO DE CARACTERES NO CAMPO DE ACORDO COM A MASCARA//
-        if (campo.value.length > Mascara.length) {
-            var texto = $(campo).val();
-            $(campo).val(texto.substring(0, texto.length - 1));
-        }
-        //////////////
-        return true;
-    }
-
-    function MascaraMoeda(i) {
-        var v = i.value.replace(/\D/g, '');
-        v = (v / 100).toFixed(2) + '';
-        v = v.replace(".", ",");
-        v = v.replace(/(\d)(\d{3})(\d{3}),/g, "$1.$2.$3,");
-        v = v.replace(/(\d)(\d{3}),/g, "$1.$2,");
-        i.value = v;
-    }
-
-    function MascaraGenerica(seletor, tipoMascara) {
-        setTimeout(function () {
-            if (tipoMascara == 'CPFCNPJ') {
-                if (seletor.value.length <= 14) { //cpf
-                    formataCampo(seletor, '000.000.000-00');
-                } else { //cnpj
-                    formataCampo(seletor, '00.000.000/0000-00');
-                }
-            } else if (tipoMascara == 'DATA') {
-                formataCampo(seletor, '00/00/0000');
-            } else if (tipoMascara == 'CEP') {
-                formataCampo(seletor, '00.000-000');
-            } else if (tipoMascara == 'TELEFONE') {
-                formataCampo(seletor, '(00) 000000000');
-            } else if (tipoMascara == 'INTEIRO') {
-                MascaraInteiro(seletor);
-            } else if (tipoMascara == 'FLOAT') {
-                MascaraFloat(seletor);
-            } else if (tipoMascara == 'CPF') {
-                formataCampo(seletor, '000.000.000-00');
-            } else if (tipoMascara == 'CNPJ') {
-                formataCampo(seletor, '00.000.000/0000-00');
-            } else if (tipoMascara == 'MOEDA') {
-                MascaraMoeda(seletor);
-            }
-        }, 200);
-    }
-</script>
-
 <h1>Cadastro de Fornecedor</h1>
 <hr />
-
-
-
-
 <div id="formulario">
-
-
-
-
-
-
     <form class="form-group" asp-action="Create">
-
-
-
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
-
-
-
-        <div class="form-row">
-            <div class="form-group col-md-7">
+        <div class="form-row form-content">
+            <div class="form-group col-md-9">
                 <label asp-for="Nome" class="control-label"></label>
-                <input asp-for="Nome" class="form-control" placeholder="Nome do Fornecedor."/>
+                <input asp-for="Nome" class="form-control" placeholder="Nome do Fornecedor." />
                 <span asp-validation-for="Nome" class="text-danger"></span>
             </div>
-            <div class="form-group col-md-5">
+            <div class="form-group col-md-9">
                 <label asp-for="CNPJ" class="control-label"></label>
                 <input asp-for="CNPJ" class="form-control" placeholder="CNPJ." onKeyPress="MascaraGenerica(this, 'CNPJ')" />
                 <span asp-validation-for="CNPJ" class="text-danger"></span>
             </div>
-        </div>
-
-
-
-        <div class="form-row">
-            <div class="form-group col-md-3">
+            <div class="form-group col-md-9">
                 <label asp-for="Cidade" class="control-label"></label>
-                <select asp-for="Cidade" id="estado" class="form-control" onchange="buscaBairros(this.value)">
+                <select asp-for="Cidade" class="form-control">
                     <option value="" hidden selected>Selecionar</option>
                     <option value="Blumenau">Blumenau</option>
                     <option value="Indaial">Indaial</option>
                 </select>
                 <span asp-validation-for="Cidade" class="text-danger"></span>
             </div>
-            <div class="form-group col-md-4">
+            <div class="form-group col-md-9">
                 <label asp-for="Bairro" class="control-label"></label>
-                <select asp-for="Bairro" class="form-control" id="cidade">
-                    <option value="" hidden selected>Selecionar</option>
-                </select>
+                <input asp-for="Bairro" class="form-control" placeholder="Bairro." />
                 <span asp-validation-for="Bairro" class="text-danger"></span>
             </div>
-            <div class="form-group col-md-5">
+            <div class="form-group col-md-6">
                 <label asp-for="Rua" class="control-label"></label>
                 <input asp-for="Rua" class="form-control" placeholder="Endereço." />
                 <span asp-validation-for="Rua" class="text-danger"></span>
             </div>
-        </div>
-
-
-
-        <div class="form-row">
             <div class="form-group col-md-3">
                 <label asp-for="Numero" class="control-label">Número</label>
-                <input asp-for="Numero" class="form-control" placeholder="Número."/>
+                <input asp-for="Numero" class="form-control" placeholder="Número." />
                 <span asp-validation-for="Numero" class="text-danger"></span>
             </div>
             <div class="form-group col-md-4">
@@ -245,11 +63,7 @@
                 <textarea class="form-control" asp-for="Observacao" placeholder="Observações."></textarea>
                 <span asp-validation-for="Observacao" class="text-danger"></span>
             </div>
-
         </div>
-
-
-
 
         <div class="form-group">
             <input type="submit" value="Cadastrar" class="btn btn-primary" /> ||
