--- a/MecProj/Views/OrdemServicoes/Edit.cshtml
+++ b/MecProj/Views/OrdemServicoes/Edit.cshtml
@@ -3,248 +3,22 @@
 @{
     ViewData["Title"] = "Edit";
 }
+
 <header>
     <style>
+        #cifrao {
+            margin-left: 25px;
+            margin-top: 10px;
+            font-size: 14pt;
+        }
+
         #formulario {
-            margin-right: 10%;
+            margin-right: 30%;
             margin-top: 2%;
             width: 800px;
         }
     </style>
 </header>
-
-
-<script>
-
-    var json_Carros = {
-        "marcas": [
-            {
-                "sigla": "Fiat",
-                "nome": "Fiat",
-                "carros": [
-                    "Grand Siena",
-                    "Siena",
-                    "Palio",
-                    "Punto",
-                    "Argo"
-                ]
-            },
-            {
-                "sigla": "Ford",
-                "nome": "Ford",
-                "carros": [
-                    "Fusion",
-                    "Focus",
-                    "Ka"
-                ]
-            },
-            {
-                "sigla": "Volkswagen",
-                "nome": "Volkswagen",
-                "carros": [
-                    "Gol",
-                    "Virtus",
-                    "Golf"
-                ]
-            }
-
-        ]
-    };
-    // FIM DO .js
-
-    function buscaCarros(e) {
-        document.querySelector("#carro").innerHTML = '';
-        var carro_select = document.querySelector("#carro");
-
-        var num_modelos = json_Carros.marcas.length;
-        var j_index = -1;
-
-        // aqui eu pego o index do Estado dentro do JSON
-        for (var x = 0; x < num_modelos; x++) {
-            if (json_Carros.marcas[x].sigla == e) {
-                j_index = x;
-            }
-        }
-        if (j_index != -1) {
-            // aqui eu percorro todas as cidades e crio os OPTIONS
-            json_Carros.marcas[j_index].carros.forEach(function (carro) {
-                var cid_opts = document.createElement('option');
-                cid_opts.setAttribute('value', carro)
-                cid_opts.innerHTML = carro;
-                carro_select.appendChild(cid_opts);
-            });
-        } else {
-            document.querySelector("#carro").innerHTML = '';
-        }
-    };
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    var json_cidades = {
-        "estados": [
-            {
-                "sigla": "SC",
-                "nome": "Santa Catarina",
-                "cidades": [
-                    "Blumenau",
-                    "Indaial",
-                    "Gaspar",
-                    "Pomerode",
-                    "Rio do Sul"
-                ]
-            }
-            ,
-            {
-                "sigla": "PR",
-                "nome": "Parana",
-                "cidades": [
-                    "Curitiba"
-                ]
-            }
-        ]
-    };
-    // FIM DO .js
-
-    function buscaCidades(e) {
-        document.querySelector("#cidade").innerHTML = '';
-        var cidade_select = document.querySelector("#cidade");
-
-        var num_estados = json_cidades.estados.length;
-        var j_index = -1;
-
-        // aqui eu pego o index do Estado dentro do JSON
-        for (var x = 0; x < num_estados; x++) {
-            if (json_cidades.estados[x].sigla == e) {
-                j_index = x;
-            }
-        }
-        if (j_index != -1) {
-            // aqui eu percorro todas as cidades e crio os OPTIONS
-            json_cidades.estados[j_index].cidades.forEach(function (cidade) {
-                var cid_opts = document.createElement('option');
-                cid_opts.setAttribute('value', cidade)
-                cid_opts.innerHTML = cidade;
-                cidade_select.appendChild(cid_opts);
-            });
-        } else {
-            document.querySelector("#cidade").innerHTML = '';
-        }
-    };
-
-    /////
-    function MascaraInteiro(num) {
-        var er = /[^0-9]/;
-        er.lastIndex = 0;
-        var campo = num;
-        if (er.test(campo.value)) {///verifica se é string, caso seja então apaga
-            var texto = $(campo).val();
-            $(campo).val(texto.substring(0, texto.length - 1));
-            return false;
-        } else {
-            return true;
-        }
-    }
-    function MascaraFloat(num) {
-        var er = /[^0-9.,]/;
-        er.lastIndex = 0;
-        var campo = num;
-        if (er.test(campo.value)) {///verifica se é string, caso seja então apaga
-            var texto = $(campo).val();
-            $(campo).val(texto.substring(0, texto.length - 1));
-            return false;
-        } else {
-            return true;
-        }
-    }
-    //formata de forma generica os campos
-    function formataCampo(campo, Mascara) {
-        var er = /[^0-9/ (),.-]/;
-        er.lastIndex = 0;
-
-        if (er.test(campo.value)) {///verifica se é string, caso seja então apaga
-            var texto = $(campo).val();
-            $(campo).val(texto.substring(0, texto.length - 1));
-        }
-        var boleanoMascara;
-        var exp = /\-|\.|\/|\(|\)| /g
-        var campoSoNumeros = campo.value.toString().replace(exp, "");
-        var posicaoCampo = 0;
-        var NovoValorCampo = "";
-        var TamanhoMascara = campoSoNumeros.length;
-        for (var i = 0; i <= TamanhoMascara; i++) {
-            boleanoMascara = ((Mascara.charAt(i) == "-") || (Mascara.charAt(i) == ".")
-                || (Mascara.charAt(i) == "/"))
-            boleanoMascara = boleanoMascara || ((Mascara.charAt(i) == "(")
-                || (Mascara.charAt(i) == ")") || (Mascara.charAt(i) == " "))
-            if (boleanoMascara) {
-                NovoValorCampo += Mascara.charAt(i);
-                TamanhoMascara++;
-            } else {
-                NovoValorCampo += campoSoNumeros.charAt(posicaoCampo);
-                posicaoCampo++;
-            }
-        }
-        campo.value = NovoValorCampo;
-        ////LIMITAR TAMANHO DE CARACTERES NO CAMPO DE ACORDO COM A MASCARA//
-        if (campo.value.length > Mascara.length) {
-            var texto = $(campo).val();
-            $(campo).val(texto.substring(0, texto.length - 1));
-        }
-        //////////////
-        return true;
-    }
-
-    function MascaraMoeda(i) {
-        var v = i.value.replace(/\D/g, '');
-        v = (v / 100).toFixed(2) + '';
-        v = v.replace(".", ",");
-        v = v.replace(/(\d)(\d{3})(\d{3}),/g, "$1.$2.$3,");
-        v = v.replace(/(\d)(\d{3}),/g, "$1.$2,");
-        i.value = v;
-    }
-
-    function MascaraGenerica(seletor, tipoMascara) {
-        setTimeout(function () {
-            if (tipoMascara == 'CPFCNPJ') {
-                if (seletor.value.length <= 14) { //cpf
-                    formataCampo(seletor, '000.000.000-00');
-                } else { //cnpj
-                    formataCampo(seletor, '00.000.000/0000-00');
-                }
-            } else if (tipoMascara == 'DATA') {
-                formataCampo(seletor, '00/00/0000');
-            } else if (tipoMascara == 'CEP') {
-                formataCampo(seletor, '00.000-000');
-            } else if (tipoMascara == 'TELEFONE') {
-                formataCampo(seletor, '(00) 000000000');
-            } else if (tipoMascara == 'INTEIRO') {
-                MascaraInteiro(seletor);
-            } else if (tipoMascara == 'FLOAT') {
-                MascaraFloat(seletor);
-            } else if (tipoMascara == 'CPF') {
-                formataCampo(seletor, '000.000.000-00');
-            } else if (tipoMascara == 'CNPJ') {
-                formataCampo(seletor, '00.000.000/0000-00');
-            } else if (tipoMascara == 'MOEDA') {
-                MascaraMoeda(seletor);
-            }
-        }, 200);
-    }
-    /* END EXTERNAL SOURCE */
-</script>
 
 
 <h1>Editar Ordem</h1>
@@ -268,10 +42,7 @@
             }
             <span asp-validation-for="Cliente" class="text-danger"></span>
         </div>
-
-
-
-        <div class="form-row form-group col-md-10">
+        <div class="form-group col-md-6">
             <div class="form-group col-md-6">
                 <label asp-for="CPF_CNPJ" class="control-label">CPF/CNPJ</label>
                 <input asp-for="CPF_CNPJ" class="form-control" />
@@ -283,8 +54,6 @@
                 <span asp-validation-for="Telefone_Celular" class="text-danger"></span>
             </div>
         </div>
-
-
         <h4>Dados Veículo:</h4>
         <div class="form-row form-group col-md-10">
             <div class="form-group col-md-7">
@@ -297,8 +66,6 @@
                 </select>
                 <span asp-validation-for="Marca_Veiculo" class="text-danger"></span>
             </div>
-
-
             <div class="form-group col-md-5">
                 <label asp-for="Modelo_Veiculo" class="control-label">Modelo</label>
                 <input asp-for="Modelo_Veiculo" class="form-control" />
@@ -333,11 +100,18 @@
                 <span asp-validation-for="Situacao" class="text-danger"></span>
             </div>
         </div>
-
         <h4>Dados Serviço:</h4>
         <div class="form-group col-md-10">
             <label asp-for="Service" class="control-label">Serviço</label>
-            <input asp-for="Service" class="form-control" placeholder="Ex.: Troca de Óleo" />
+            @*<input asp-for="Service" class="form-control" placeholder="Serviços" />*@
+            <select asp-for="Service" class="form-control select2-choices">
+                <option value="" selected hidden>Selecionar</option>
+                <option value="troca de óleo">Troca de Peças</option>
+                <option value="Recuperação de Peças">Recuperação de Peças</option>
+                <option value="Elétrica">Manutenção Preventiva</option>
+                <option value="Manutenção Preventivas">Elétrica</option>
+                <option value="Outros">Outros</option>
+            </select>
             <span asp-validation-for="Service" class="text-danger"></span>
         </div>
         <div class="form-group col-md-10">
@@ -351,10 +125,14 @@
             <span asp-validation-for="Pecas" class="text-danger"></span>
         </div>
 
-        <div class="form-group col-md-4">
-            <label asp-for="Valor_Total" class="control-label">Valor Total</label>
-            <input asp-for="Valor_Total" class="form-control" placeholder="R$ 0,00" />
-            <span asp-validation-for="Valor_Total" class="text-danger"></span>
+        <div class="form-row form-group cold-md-5">
+            <div class="form-group col-md-1">
+                <label id="cifrao" asp-for="Valor_Total" class="control-label"><b>R$</b></label>
+            </div>
+            <div class="form-group col-md-3">
+                <input asp-for="Valor_Total" type="text" class="form-control" placeholder="Valor Total" onKeyPress="MascaraGenerica(this, 'MOEDA')" />
+                <span asp-validation-for="Valor_Total" class="text-danger"></span>
+            </div>
         </div>
         <br />
 
@@ -364,7 +142,6 @@
         </div>
     </form>
 </div>
-
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
