--- a/MecProj/wwwroot/css/site.css
+++ b/MecProj/wwwroot/css/site.css
@@ -1,6 +1,19 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+#cifrao {
+    margin-left: 25px;
+    margin-top: 10px;
+    font-size: 14pt;
+}
+
+
+#formulario {
+    margin-right: 30%;
+    margin-top: 2%;
+    width: 800px;
+}
+
 a.navbar-brand {
   white-space: normal;
   text-align: center;
